--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>extentreports</artifactId>
             <version>5.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.5</version>
+        </dependency>
     </dependencies>
 
     <build>
